--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>{% block title %} {{ flatpage.title }} {% endblock title %}</title>
+        <title>{% block title %} {% endblock title %}</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -13,10 +13,12 @@
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
+        <!-- Loads -->
+        {% load custom_tags %}
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
            <div class="container">
-               <a class="navbar-brand" href="#">News Portal</a>
+               <a class="navbar-brand" href="/">News Portal</a>
                <button class="navbar-toggler" type="button" data-toggle="collapse"
                        data-target="#navbarResponsive"
                        aria-controls="navbarResponsive" aria-expanded="false"
@@ -29,7 +31,7 @@
                            <a class="nav-link" href="/news/">News</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/news/{{ random_index }}">Random new</a>
+                           <a class="nav-link" href="/news/{% random_new_id %}">Random new</a>
                        </li>
 <!--                       <li class="nav-item active">-->
 <!--                           <a class="nav-link" href="/home/">Home</a>-->
@@ -55,7 +57,7 @@
            <div class="row">
                <div class="col-lg-12 text-center">
                    {% block content %}
-                   <i><h1>{{ flatpage.content }}</h1></i>
+
                    {% endblock content %}
                </div>
            </div>
