--- a/templates/new.html
+++ b/templates/new.html
@@ -1,30 +1,13 @@
 {% extends 'flatpages/default.html' %}
+{% load static %}
 
 {% block title %}
 Fresh new
 {% endblock title %}
 
 {% block content %}
+<link rel="stylesheet" type='text/css' href="{% static 'css/news_styles.css' %}">
 
-<style>
-td {
-    border: 1px solid;
-    padding: 10px;
-}
-
-table {
-	width: 100%;
-}
-
-.table-head {
-    background-color: lightgray;
-    height: 50px;
-}
-
-.date-time-collumn {
-	width: 15%;
-}
-</style>
 
 <h1>Одна из новостей</h1>
 <hr>
