--- a/templates/news.html
+++ b/templates/news.html
@@ -1,30 +1,12 @@
 {% extends 'flatpages/default.html' %}
+{% load static %}
 
 {% block title %}
 News
 {% endblock title %}
 
 {% block content %}
-
-<style>
-td {
-    border: 1px solid;
-    padding: 10px;
-}
-
-table {
-	width: 100%;
-}
-
-.table-head {
-    background-color: lightgray;
-    height: 50px;
-}
-
-.date-time-collumn {
-	width: 15%;
-}
-</style>
+<link rel="stylesheet" type='text/css' href="{% static 'css/news_styles.css' %}">
 
 <h1>Все доступные новости</h1>
 <hr>
@@ -40,7 +22,7 @@ table {
 		<tr>
 			<td>{{ i.name }}</td>
 			<td>{{ i.datetime_in|date:'d.m.Y' }}</td>
-			<td>{{ i.content|truncatewords:20 }}</td>
+			<td>{{ i.content|truncatechars:20 }}</td>
 		</tr>
 		{% endfor %}
 	</table>
