--- a/static/css/home-styles.css
+++ b/static/css/home-styles.css
@@ -1,5 +1,12 @@
-
-
-.pages-con {
-    color: red;
+h1 {
+    font-style: italic;
+    font-family: fantasy;
+    font-size: 3em;
 }
+
+.pages, ol {
+    text-align: left;
+    font-family: serif;
+    font-size: 20px;
+}
+
