--- a/static/css/news-styles.css
+++ b/static/css/news-styles.css
@@ -1,3 +1,13 @@
+h1 {
+    font-style: italic;
+    font-family: fantasy;
+    font-size: 3em;
+}
+
+h3 {
+    font-family: fantasy;
+}
+
 td {
     border: 1px solid;
     padding: 10px;
@@ -5,6 +15,7 @@ td {
 
 table {
 	width: 100%;
+	font-family: serif;
 }
 
 .table-head {
