--- a/templates/new.html
+++ b/templates/new.html
@@ -1,12 +1,13 @@
 {% extends 'flatpages/default.html' %}
 {% load static %}
+{% load custom_filters %}
 
 {% block title %}
 Fresh new
 {% endblock title %}
 
 {% block content %}
-<link rel="stylesheet" type='text/css' href="{% static 'css/news_styles.css' %}">
+<link rel="stylesheet" type='text/css' href="{% static 'css/news-styles.css' %}">
 
 
 <h1>Одна из новостей</h1>
@@ -18,9 +19,9 @@ Fresh new
 			<td>Содержание</td>
 		</tr>
 		<tr>
-			<td>{{ new.name }}</td>
+			<td>{{ new.name|censor }}</td>
 			<td>{{ new.datetime_in|date:'d.m.Y' }}</td>
-			<td>{{ new.content }}</td>
+			<td>{{ new.content|censor }}</td>
 		</tr>
 </table>
 {% endblock content %}
