--- a/templates/news.html
+++ b/templates/news.html
@@ -1,12 +1,13 @@
 {% extends 'flatpages/default.html' %}
 {% load static %}
+{% load custom_filters %}
 
 {% block title %}
 News
 {% endblock title %}
 
 {% block content %}
-<link rel="stylesheet" type='text/css' href="{% static 'css/news_styles.css' %}">
+<link rel="stylesheet" type='text/css' href="{% static 'css/news-styles.css' %}">
 
 <h1>Все доступные новости</h1>
 <hr>
@@ -20,13 +21,13 @@ News
 		</tr>
 		{% for i in news %}
 		<tr>
-			<td>{{ i.name }}</td>
+			<td>{{ i.name|censor }}</td>
 			<td>{{ i.datetime_in|date:'d.m.Y' }}</td>
 			<td>{{ i.content|truncatechars:20 }}</td>
 		</tr>
 		{% endfor %}
 	</table>
 {% else %}
-	<h2>Новостей нет!</h2>
+	<h2>Новостной портал пуст!</h2>
 {% endif %}
 {% endblock content %}
