--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -625,6 +625,18 @@ progress {
   color: #6c757d;
 }
 
+.logo {
+    background-color: white;
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    margin-left: 25px;
+    border-radius: 100%;
+    border: 1px solid;
+    background: url("/static/assets/logo.png") no-repeat;
+    background-size: cover;
+}
+
 .container,
 .container-fluid,
 .container-xxl,
