--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -11,13 +11,20 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         {% load static %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link rel="stylesheet" type='text/css' href="{% static 'css/news-styles.css' %}">
     </head>
     <body>
         <!-- Loads -->
         {% load custom_tags %}
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <nav style="position: fixed; width: 100%;" class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+            <a style="margin-top: -35px;" href="https://github.com/Sw0tty">
+                <div class="logo">
+
+                </div>
+            </a>
            <div class="container">
+
                <a class="navbar-brand" href="/">News Portal</a>
                <button class="navbar-toggler" type="button" data-toggle="collapse"
                        data-target="#navbarResponsive"
@@ -33,12 +40,13 @@
                        <li class="nav-item">
                            <a class="nav-link" href="/news/{% random_new_id %}">Random new</a>
                        </li>
-<!--                       <li class="nav-item active">-->
-<!--                           <a class="nav-link" href="/home/">Home</a>-->
-<!--                       </li>-->
-<!--                       <li class="nav-item">-->
-<!--                           <a class="nav-link" href="/contacts/">Contacts</a>-->
-<!--                       </li>-->
+                       <li class="nav-item">
+                           <a class="nav-link" href="/news/search/">Search</a>
+                       </li>
+                       <li class="nav-item active">
+                           <a class="nav-link" href="/create/">Create</a>
+                       </li>
+
 <!--                       <li class="nav-item">-->
 <!--                           <a class="nav-link" href="/about_me/">About Me</a>-->
 <!--                       </li>-->
@@ -54,7 +62,7 @@
         </nav>
         <!-- Page content-->
         <div class="container">
-           <div class="row">
+           <div style="padding-top: 8%;" class="row">
                <div class="col-lg-12 text-center">
                    {% block content %}
 
