--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,4 @@
 {% extends 'flatpages/default.html' %}
-
 {% load static %}
 
 {% block title %}
@@ -16,10 +15,10 @@
 <div class="cube">
     <h1>Доступные страницы</h1>
     <ol>
-        <li>News - все новости</li>
-        <li>Random new - случайная новость</li>
-        <li>Search - поиск по новостям</li>
-        <li>Create - создание новостей</li>
+        <li>News - все посты</li>
+        <li>Random new - случайный пост</li>
+        <li>Search - поиск постов по параметрам</li>
+        <li>Create - создание постов</li>
         <li>Admin - панель администратора</li>
     </ol>
 </div>
@@ -30,16 +29,24 @@
     <h3>Добавлены страницы</h3>
     <hr>
     <ol>
-        <li>Search - поиск по новостям</li>
-        <li>Create - создание новостей</li>
+        <li>Search - поиск постов по параметрам</li>
+        <li>Create - создание постов</li>
     </ol>
     <br>
     <h3>Внесенные изменения</h3>
     <hr>
     <ol>
-        <li>News - добалена кнопка для перехода к редактированию новости</li>
-        <li>Random new - добалена кнопка для перехода к редактированию новости</li>
-        <li>Create - создание новостей</li>
+        <li>News - добалена кнопка для перехода к редактированию поста</li>
+        <li>Random new - добалена кнопка для перехода к редактированию поста</li>
+        <li>Обновлен внешний вид</li>
+    </ol>
+    <br>
+    <h3>Краткое описание новых возможностей</h3>
+    <hr>
+    <ol>
+        <li>Search - при переходе отображает все посты без фильтров. Поиск осуществляется, как по каждому в отдельности, так и по нескольким фильтрам.</li>
+        <li>Create - страница выбора опредленного типа поста. После выбора переносит на создание поста.</li>
+        <li>Кнопки редактирования - при нажатии открывают выбранный пост в режиме редактирования. Тамже можно удалить пост.</li>
     </ol>
 </div>
 
