--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>{% block title %} {% endblock title %}</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         {% load static %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
@@ -17,7 +17,7 @@
         <!-- Loads -->
         {% load custom_tags %}
         <!-- Responsive navbar-->
-        <nav style="position: fixed; width: 100%;" class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <nav style="z-index: 100; position: fixed; width: 100%;" class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <a style="margin-top: -35px;" href="https://github.com/Sw0tty">
                 <div class="logo">
 
@@ -62,7 +62,7 @@
         </nav>
         <!-- Page content-->
         <div class="container">
-           <div style="padding-top: 8%;" class="row">
+           <div style="padding-top: 5%;" class="row">
                <div class="col-lg-12 text-center">
                    {% block content %}
 
