--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,22 @@
 
 {% block content %}
 <link rel="stylesheet" type='text/css' href="{% static 'css/home-styles.css' %}">
-
-<div class="main-cube">
+<style>
+    body {
+      background: url("/static/assets/news.jpg") no-repeat fixed;
+      background-size: cover;
+    }
+</style>
+<div class="title-cube">
     <h1>Добро пожаловать на новостной портал!</h1>
 </div>
+<!--<section>-->
+<!--    <div class="image-block">-->
+<!--    </div>-->
+<!--    <div class="">-->
+<!--        <h1>Добро пожаловать на новостной портал!</h1>-->
+<!--    </div>-->
+<!--</section>-->
 
 <div class="cube">
     <h1>Доступные страницы</h1>
@@ -19,36 +31,38 @@
         <li>Random new - случайный пост</li>
         <li>Search - поиск постов по параметрам</li>
         <li>Create - создание постов</li>
+        <li>For users - страница пользователей</li>
         <li>Admin - панель администратора</li>
     </ol>
 </div>
-
 
 <div class="cube">
     <h1>Что нового?</h1>
     <h3>Добавлены страницы</h3>
     <hr>
-    <ol>
-        <li>Search - поиск постов по параметрам</li>
-        <li>Create - создание постов</li>
-    </ol>
+    <p class="home-text">For users - страница только для авторизованных пользователей.</p>
+<!--    <ol>-->
+<!--        <li>Search - поиск постов по параметрам</li>-->
+<!--        <li>Create - создание постов</li>-->
+<!--    </ol>-->
     <br>
     <h3>Внесенные изменения</h3>
     <hr>
     <ol>
-        <li>News - добалена кнопка для перехода к редактированию поста</li>
-        <li>Random new - добалена кнопка для перехода к редактированию поста</li>
-        <li>Обновлен внешний вид</li>
+        <li>Bar - добавлено поле для перехода к форме авторизации.</li>
+        <li>Все страницы с авторизацией, регистрацией, выхода из аккаунта переопределены для подключения стилей.</li>
+        <li>Переопределена страница ошибки 403</li>
     </ol>
     <br>
     <h3>Краткое описание новых возможностей</h3>
     <hr>
+<!--    <p style="text-align: left; margin-left:20px;" class="home-text">При переходе для авторизации можно либо-->
+<!--        зарегистрироваться, либо войти через свой акаунт Google или GitHub.</p>-->
     <ol>
-        <li>Search - при переходе отображает все посты без фильтров. Поиск осуществляется, как по каждому в отдельности, так и по нескольким фильтрам.</li>
+        <li>При переходе для авторизации можно либо
+        зарегистрироваться, либо войти через свой акаунт Google или GitHub.</li>
         <li>Create - страница выбора опредленного типа поста. После выбора переносит на создание поста.</li>
         <li>Кнопки редактирования - при нажатии открывают выбранный пост в режиме редактирования. Тамже можно удалить пост.</li>
     </ol>
 </div>
-
-
 {% endblock content %}
