--- a/static/css/home-styles.css
+++ b/static/css/home-styles.css
@@ -1,22 +1,33 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 h1 {
     font-style: italic;
     font-family: fantasy;
     font-size: 3em;
 }
 
-body {
-  background: url("/static/assets/news.jpg") no-repeat fixed;
-  background-size: cover;
-}
-
-ol {
+ol, p {
     text-align: left;
     font-family: serif;
     font-size: 20px;
     font-size: 1.2em;
 }
 
-.main-cube {
+section {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+}
+
+.title-cube {
     background-color: white;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -32,15 +43,49 @@ ol {
 
 .cube {
   margin-top: 20px;
+  margin-bottom: 20px;
   padding: 20px;
   position: relative;
   width: 100%;
   background: transparent;
   border-radius: 20px;
-  backdrop-filter: blur(4px);
   display: flow-root;
   justify-content: center;
   align-items: center;
   border: 1px solid black;
   backdrop-filter: blur(4px);
+}
+
+.home-text {
+    font-family: serif;
+    text-align: left;
+    margin-left:20px;
+}
+
+.image-block {
+    background: url("/static/assets/newsportal.png") no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+}
+
+.become-author {
+    font-size: 20px;
+    border-radius: 20px;
+    text-align: center;
+    text-decoration: none;
+    font-family: sans-serif;
+    border: 2px solid black;
+    color: black;
+    margin: 30px 0px 30px 0px;
+    padding: 5px 15px 5px 15px;
+    transition: 0.4s;
+    display: block;
+}
+
+.become-author:hover {
+    background-color: #ffd700;
+    color: black;
+    box-shadow: 0px 0px 26px 6px #ffdf33;
 }
