--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -635,6 +635,11 @@ progress {
     border: 1px solid;
     background: url("/static/assets/logo.png") no-repeat;
     background-size: cover;
+    transition: 0.4s;
+}
+
+.logo:hover {
+    box-shadow: 0px 0px 8px 3px whitesmoke;
 }
 
 .container,
