--- a/templates/new.html
+++ b/templates/new.html
@@ -12,18 +12,33 @@ Fresh new
 
 <h1>Одна из новостей</h1>
 <hr>
-<table>
+<div class="table-cube">
+	<table>
 		<tr class="table-head">
-			<td>Заголовок</td>
-			<td class="date-time-collumn">Дата публикации</td>
-			<td>Содержание</td>
-			<td style="width: 10%;">Изменить</td>
+			<th>Заголовок</th>
+			<th class="date-time-collumn">Дата публикации</th>
+			<th>Категория</th>
+			<th>Содержание</th>
+			<th style="width: 10%;">Изменить</th>
 		</tr>
 		<tr>
 			<td>{{ new.name|censor }}</td>
 			<td>{{ new.datetime_in|date:'d.m.Y' }}</td>
+			<td>{% if new.category.all %}
+					{% for j in new.category.all %}
+				{% if forloop.last %}
+					{{ j }}
+				{% else %}
+					{{ j }},
+				{% endif %}
+				{% endfor %}
+				{% else %}
+					Без категории
+				{% endif %}
+				</td>
 			<td>{{ new.content|censor }}</td>
 			<td><a href="{{ new.id }}/edit"><input class="edit-button" type="submit" value="Изменить"></a></td>
 		</tr>
-</table>
+	</table>
+</div>
 {% endblock content %}
