--- a/templates/post_edit_page.html
+++ b/templates/post_edit_page.html
@@ -43,7 +43,7 @@ Article create
     <div class="danger-zone">
         <h2>Danger Zone!</h2>
         <hr>
-        <a href="/news/14/delete"><input type="submit" value="Удалить пост"></a>
+        <a href="delete/"><input type="submit" value="Удалить пост"></a>
     </div>
 {% endif %}
 
