--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -12,6 +12,10 @@ input[type='submit'] {
     color: white;
 }
 
+a {
+    color: white;
+}
+
 h1 {
     text-align: center;
     font-size: 40px;
@@ -45,7 +49,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 60 0 60 0;
+  padding: 60px 0px 60px 0px;
 }
 
 .block2 {
