--- a/templates/home.html
+++ b/templates/home.html
@@ -32,6 +32,7 @@
         <li>Search - поиск постов по параметрам</li>
         <li>Create - создание постов</li>
         <li>For users - страница пользователей</li>
+        <li>Categories - все достпуные категории</li>
         <li>Admin - панель администратора</li>
     </ol>
 </div>
@@ -40,7 +41,7 @@
     <h1>Что нового?</h1>
     <h3>Добавлены страницы</h3>
     <hr>
-    <p class="home-text">For users - страница только для авторизованных пользователей.</p>
+    <p class="home-text">Categories - все доступные категории.</p>
 <!--    <ol>-->
 <!--        <li>Search - поиск постов по параметрам</li>-->
 <!--        <li>Create - создание постов</li>-->
