--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
     }
 </style>
 <div class="title-cube">
+<!--    <h1>{{ request.user.is_authenticated }}</h1>-->
     <h1>Добро пожаловать на новостной портал!</h1>
 </div>
 <!--<section>-->
