--- a/templates/post_edit_page.html
+++ b/templates/post_edit_page.html
@@ -26,7 +26,7 @@ Article create
 
 <hr>
 <section>
-    <form action="" method="post" onsubmit="enablePath();">
+    <form action="" method="post">
         {% csrf_token %}
         {% for i in form %}
             <div class="filter-block">
