--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>{% block title %} {% endblock title %}</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         {% load static %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
