--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
       background-size: cover;
     }
 </style>
+<!--<div class="sticky"></div>-->
 <div class="title-cube">
 <!--    <h1>{{ request.user.is_authenticated }}</h1>-->
     <h1>Добро пожаловать на новостной портал!</h1>
